# pydiverse.common

./: .gitignore  pixi.toml  pyproject.toml
.github/workflows/: release.yml  tests.yml  update-lockfiles.yml
docs/source/: changelog.md  conf.py  index.md
docs/source/reference/: api.rst
src/pydiverse/common/: __init__.py  dtypes.py
src/pydiverse/common/errors/: __init__.py
src/pydiverse/common/util/: __init__.py  computation_tracing.py  deep_map.py  disposable.py  hashing.py  import_.py  structlog.py
tests/: conftest.py  test_structlog.py  test_util.py
tests/dtypes/: test_dtype_pandas.py  test_dtype_polars.py  test_dtype_pyarrow.py  test_dtype_sqlalchemy.py
