[project]
name = "pydiverse-common"
version = "0.1.0"
description = "Common functionality shared between pydiverse libraries"
license = "BSD-3-Clause"

requires-python = ">=3.9"

[tool.hatch.build.targets.wheel]
packages = ["src/pydiverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
